@@ -1,0 +1,3 @@
+add_executable(manual_unsubscribe main.cpp)
+
+target_link_libraries(manual_unsubscribe eventbus)
